# brdata

./: .dockerignore  .env.example  .gitignore  Dockerfile  PRD.md  README.md  docker-compose.yml  features.json  pyproject.toml  ralph.sh  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.zed/: settings.json
mcp_server/: Dockerfile  env.py  ibge_client.py  server.py
mcp_server/tools/: agregados.py  localidades.py  location.py  nomes.py
src/: config.py  env.py  main.py
src/agent/: agent.py  graph.py  nodes.py  prompt.py  prompts.py  state.py
src/api/: schemas.py
src/api/routes/: chat.py  health.py  history.py
src/db/: connection.py  models.py  repository.py
src/mcp/: client.py
src/routes/: chat.py  health.py  responses.py
src/tracking/: setup.py
src/utils/: env.py
tests/integration/: test_health.py
tests/unit/: test_tools_agregados.py  test_tools_localidades.py  test_tools_nomes.py
