[project]
name = "ibge-agent"
version = "0.1.0"
description = "IBGE Conversational Agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "langchain>=0.3",
    "langgraph>=0.2",
    "langchain-ollama>=0.2",
    "langchain-mcp-adapters>=0.1",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "fastmcp>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.hatch.build.targets.wheel]
packages = ["src", "mcp_server"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
