[project]
name = "ibge-agent"
version = "0.1.0"
description = "IBGE Conversational Agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.135.1",
    "uvicorn[standard]==0.41.0",
    "langchain==1.2.11",
    "langgraph==1.1.0",
    "langchain-ollama==1.0.1",
    "langchain-mcp-adapters==0.2.1",
    "sqlalchemy[asyncio]==2.0.48",
    "asyncpg==0.31.0",
    "pydantic-settings==2.13.1",
    "httpx==0.28.1",
    "fastmcp==3.1.1",
    "ipykernel==7.2.0",
]

[tool.ruff]
line-length = 88

[dependency-groups]
dev = [
    "ruff==0.15.6",
]
