[project]
name = "ibge-agent"
version = "0.1.0"
description = "IBGE Conversational Agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.135.3",
    "uvicorn[standard]==0.42.0",
    "langchain==1.2.13",
    "langgraph==1.1.3",
    "langchain-ollama==1.0.1",
    "langchain-mcp-adapters==0.2.2",
    "sqlalchemy[asyncio]==2.0.48",
    "asyncpg==0.31.0",
    "pydantic-settings==2.13.1",
    "httpx==0.28.1",
    "fastmcp==3.2.0",
    "ipykernel==7.2.0",
    "mlflow==3.10.1",
]

[tool.ruff]
line-length = 88

[dependency-groups]
dev = [
    "ruff==0.15.8",
]
